[package]
name = "cst"
version = "0.1.204"
edition = "2021"
author = "Tony Bark"
description = "Parser for the CST format."
license = "MIT OR Apache-2.0"
repository = "https://github.com/tonytins/cstrs"
readme = "README.md"
keywords = ["translation", "parser", "cst", "sims", "sims-online"]
categories = ["accessibility", "parser-implementations", "text-processing"]

[dependencies]
substring = "1"
walkdir = "2"

[dev-dependencies]
rand = "0.8"
